--- a/shoppingmall/account/templates/signup.html
+++ b/shoppingmall/account/templates/signup.html
@@ -13,6 +13,7 @@
         <input type="password" name="password" placeholder="비밀번호를 입력하세요 ."><br>
         <input type="password" name="password2" placeholder="비밀번호를 한 번 더 입력하세요"><br>
         <input type="text" name="university" placeholder="재학 중인 대학교를 입력하세요"><br>
+        <input type="text" name="adress" placeholder="주소를 입력해주세요."><br>
         <p>프로필 사진을 첨부해주세요. <input name="image" type="file"></p>
         <button>회원가입</button>
     </form>
