--- a/shoppingmall/shopping/templates/home.html
+++ b/shoppingmall/shopping/templates/home.html
@@ -1,14 +1,9 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
-    <title>Document</title>
-</head>
-<body>
+{% block title %}Shoppingmall{% endblock %}
+{% block link %}{% static 'css/home.css' %}{% endblock %}
+{% block content %}
+
     <div class="account_user">
     {% if user.is_authenticated %}
     <h3>{{ user.username }}님 환영합니다!</h3>
@@ -37,5 +32,4 @@
         <hr>
     </div>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
