--- a/shoppingmall/shopping/templates/new.html
+++ b/shoppingmall/shopping/templates/new.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+{% block title %}상품 등록{% endblock %}
+{% block link %}{% endblock %}
+{% block content %}
+
     <h3>[ 상품 등록 페이지 ]</h3>
     <form method="POST" action="{% url 'create' %}" enctype="multipart/form-data">
         {% csrf_token %}
@@ -17,5 +14,5 @@
         <br>
         <button>상품 등록</button>
     </form>
-</body>
-</html>
+
+{% endblock %}
