--- a/shoppingmall/shopping/templates/base.html
+++ b/shoppingmall/shopping/templates/base.html
@@ -33,12 +33,19 @@
               <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
               </a>
+              {% if user.is_authenticated %}
               <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                 <li><a class="dropdown-item" href="#">Cart</a></li>
                 <li><a class="dropdown-item" href="{% url 'mypage' %}">Profile</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="{% url 'user_logout' %}">Sign out</a></li>
               </ul>
+              {% else %}
+              <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                <li><a class="dropdown-item" href="{% url 'user_login' %}">Login</a></li>
+                <li><a class="dropdown-item" href="{% url 'signup' %}">Sign up</a></li>
+              </ul>
+              {% endif %}
             </div>
           </div>
         </div>
