--- a/shoppingmall/shopping/templates/detail.html
+++ b/shoppingmall/shopping/templates/detail.html
@@ -4,7 +4,7 @@
 {% block link %}{% endblock %}
 {% block content %}
 
-    <h1>자세히보기</h1>
+    <h1>[ 상품 자세히보기 ]</h1>
     <h3>{{ item.name }}</h3>
     <h3>{{ item.price }}</h3>
     <p><img src="{{ item.image.url }}" width="230" alt="안나옴"></p>
