--- a/shoppingmall/shopping/templates/base.html
+++ b/shoppingmall/shopping/templates/base.html
@@ -31,7 +31,11 @@
     
             <div class="dropdown text-end">
               <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                {% if user.is_authenticated %}
+                <img src="{{ user.imgae.url }}" alt="mdo" width="32" height="32" class="rounded-circle">
+                {% else %}
                 <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                {% endif %}
               </a>
               {% if user.is_authenticated %}
               <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
