--- a/shoppingmall/shopping/templates/base.html
+++ b/shoppingmall/shopping/templates/base.html
@@ -32,7 +32,7 @@
     
             <div class="dropdown text-end">
               <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                {% if user.is_authenticated %}
+                {% if user.image %}
                 <img src="{{ user.image.url }}" alt="X" width="32" height="32" class="rounded-circle">
                 {% else %}
                 <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
