--- a/shoppingmall/shopping/templates/base.html
+++ b/shoppingmall/shopping/templates/base.html
@@ -22,8 +22,9 @@
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="{% url 'home' %}" class="nav-link px-2 link-dark">home</a></li>
-              <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
-              <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
+              {% if user.is_superuser %}
+              <li><a href="{% url 'create' %}" class="nav-link px-2 link-dark">상품 등록</a></li>
+              {% endif %}
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
@@ -40,7 +41,7 @@
               </a>
               {% if user.is_authenticated %}
               <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="#">Cart</a></li>
+                <li><a class="dropdown-item" href="{% url 'order_list' %}">Order</a></li>
                 <li><a class="dropdown-item" href="{% url 'mypage' %}">Profile</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="{% url 'user_logout' %}">Sign out</a></li>
