--- a/shoppingmall/shopping/templates/detail.html
+++ b/shoppingmall/shopping/templates/detail.html
@@ -9,7 +9,21 @@
     <h3>{{ item.price }}</h3>
     <p><img src="{{ item.image.url }}" width="230" alt="안나옴"></p>
     <h3>{{ item.body }}</h3>
+    {% if user.is_authenticated %}
+    <div>
+    <a href="{% url 'order' item.id %}">
+        <button id="order-btn">주문하기</button>
+    </a>
+</div>
+    <br>
+    {% if user.is_superuser %}
+    <div>
     <a href="{% url 'update' item.id %}"><input type="button" value="수정하기"></a>
+    </div>
+    <div>
     <a href="{% url 'delete' item.id %}"><input type="button" value="삭제하기"></a>
+    </div>
+    {% endif %}
+    {% endif %}
 
 {% endblock %}
