--- a/shoppingmall/shopping/templates/edit.html
+++ b/shoppingmall/shopping/templates/edit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}상품 수정{% endblock %}
-{% block link %}{% endblock %}
+{% block link %}{% static 'css/new.css' %}{% endblock %}
 {% block content %}
 
     <h3>[ 상품 수정 ]</h3>
