--- a/shoppingmall/account/static/css/signup.css
+++ b/shoppingmall/account/static/css/signup.css
@@ -8,3 +8,33 @@
 *{
     font-family: 'IM_Hyemin-Regular';
 }
+
+.signup-title{
+    text-align: center;
+}
+
+.signup{
+    text-align: center;
+}
+
+.int{
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    border-color: #e4e4e4;
+    border-width: 1px;
+    font-size: 14px;
+}
+
+input:focus {
+    outline: none;
+}
+
+.box{
+    text-align: center;
+    padding-left: 4%;
+}
+
+.join_title{
+    padding-left: 4%;
+}
