--- a/shoppingmall/account/templates/login.html
+++ b/shoppingmall/account/templates/login.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+{% block title %}로그인{% endblock %}
+{% block link %}{% static 'css/login.css' %}{% endblock %}
+{% block content %}
+
+    <h1 class="title">로그인</h1>
     <form method="POST" action="{% url 'user_login' %}">
         {% csrf_token %}
-        <input type="text" name="username" placeholder="아이디를 입력하세요 ."><br>
-        <input type="password" name="password" placeholder="비밀번호를 입력하세요 ."><br>
-        <button>로그인</button>
-        <p>{{ error }}</p>
+        <div class="content">
+            <div class="login">
+                <input type="text" id= "id" name="username" placeholder="아이디를 입력하세요 ."><br>
+                <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요 ."><br>
+            </div>
+        </div>
+
+            <!-- JOIN BTN-->
+            <div class="btn_area">
+                <button id="btnJoin">
+                    로그인
+                </button>
+                <p style="text-align: center;">회원가입<a href="{% url 'signup' %}" style="color:black;"></a></p>
+            </div>
     </form>
-</body>
-</html>
+{% endblock %}
