--- a/shoppingmall/account/templates/signup.html
+++ b/shoppingmall/account/templates/signup.html
@@ -1,21 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+{% block title %}회원가입{% endblock %}
+{% block link %}{% static 'css/signup.css' %}{% endblock %}
+{% block content %}
+
+<h1 class="signup-title">회원가입</h1>
+
     <form method="POST" action="{% url 'signup' %}" enctype="multipart/form-data">
         {% csrf_token %}
-        <input type="text" name="username" placeholder="아이디를 입력하세요 ."><br>
-        <input type="password" name="password" placeholder="비밀번호를 입력하세요 ."><br>
-        <input type="password" name="password2" placeholder="비밀번호를 한 번 더 입력하세요"><br>
-        <input type="text" name="university" placeholder="재학 중인 대학교를 입력하세요"><br>
-        <input type="text" name="adress" placeholder="주소를 입력해주세요."><br>
-        <p>프로필 사진을 첨부해주세요. <input name="image" type="file"></p>
-        <button>회원가입</button>
+        <div class="signup">
+            <p><input class="int" type="text" name="username" placeholder="아이디를 입력하세요 ."><br></p>
+            <p><input class="int" type="password" name="password" placeholder="비밀번호를 입력하세요 ."><br></p>
+            <p><input class="int" type="password" name="password2" placeholder="비밀번호를 한 번 더 입력하세요"><br></p>
+            <p><input class="int" type="text" name="university" placeholder="재학 중인 대학교를 입력하세요"><br></p>
+            <p><input class="int" type="text" name="adress" placeholder="주소를 입력해주세요."><br></p>
+            <!-- profileImg -->
+            <p>프로필이미지</p>
+                <p class="box">
+                    <input type="file" name="image" accept="image/*"  maxlength="20" required>
+            </p>
+
+            <button>회원가입</button>
+        </div>
     </form>
-</body>
-</html>
+    {% endblock%}
