--- a/shoppingmall/shopping/templates/detail.html
+++ b/shoppingmall/shopping/templates/detail.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}상세페이지{% endblock %}
-{% block link %}{% endblock %}
+{% block link %}{% static 'css/detail.css' %}{% endblock %}
 {% block content %}
 
-    <h1>[ 상품 자세히보기 ]</h1>
     <h3>{{ item.name }}</h3>
     <h3>{{ item.price }}</h3>
     <p><img src="{{ item.image.url }}" width="230" alt="안나옴"></p>
