--- a/shoppingmall/shopping/templates/new.html
+++ b/shoppingmall/shopping/templates/new.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}상품 등록{% endblock %}
-{% block link %}{% endblock %}
+{% block link %}{% static 'css/new.css' %}{% endblock %}
 {% block content %}
 
     <h3>[ 상품 등록 페이지 ]</h3>
