--- a/shoppingmall/static/css/login.css
+++ b/shoppingmall/static/css/login.css
@@ -8,3 +8,56 @@
 *{
     font-family: 'IM_Hyemin-Regular';
 }
+
+.title{
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    margin-top: 3%;
+}
+
+.content{
+    display: flex;
+    justify-content: center;
+}
+
+.login{
+    margin-top: 3%;
+}
+
+#id, #password {
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    border-color: #e4e4e4;
+    border-width: 1px;
+    font-size: 14px;
+}
+
+input:focus{
+    outline: none;
+}
+
+#id{
+    margin-bottom: 1%;
+}
+
+.btn_area {
+    text-align: center;
+    margin: 30px 0 91px;
+}
+
+#btnJoin {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    width: 300px;
+    padding: 21px 0 17px;
+    border: 0;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+    background-color: hsl(60, 100%, 95%);
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 20px;
+}
