--- a/shoppingmall/shopping/templates/base.html
+++ b/shoppingmall/shopping/templates/base.html
@@ -22,7 +22,7 @@
             </a>
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="{% url 'home' %}" class="nav-link px-2 link-dark">home</a></li>
+              <li><a href="{% url 'home' %}" class="nav-link px-2 link-dark">Dear.my pet</a></li>
               {% if user.is_superuser %}
               <li><a href="{% url 'create' %}" class="nav-link px-2 link-dark">상품 등록</a></li>
               {% endif %}
