--- a/shoppingmall/account/static/css/signup.css
+++ b/shoppingmall/account/static/css/signup.css
@@ -9,32 +9,95 @@
     font-family: 'IM_Hyemin-Regular';
 }
 
-.signup-title{
+html {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    height: 100%;
+}
+#logo {
+    width: 240px;
+    height: 44px;
+    cursor: pointer;
+}
+
+#header {
+    padding-top: 62px;
+    padding-bottom: 20px;
     text-align: center;
 }
-
-.signup{
-    text-align: center;
+#wrapper {
+    position: relative;
+    height: 100%;
 }
 
-.int{
-    width: 300px;
-    height: 40px;
-    border-radius: 20px;
-    border-color: #e4e4e4;
-    border-width: 1px;
-    font-size: 14px;
+#content {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    width: 460px;
 }
-
 input:focus {
     outline: none;
 }
 
-.box{
-    text-align: center;
-    padding-left: 4%;
+
+h3 {
+    margin: 19px 0 8px;
+    font-size: 14px;
+    font-weight: 700;
 }
 
-.join_title{
-    padding-left: 4%;
+
+.box {
+    display: block;
+    width: 100%;
+    height: 51px;
+    border: solid 1px #dadada;
+    padding: 10px 14px 10px 14px;
+    box-sizing: border-box;
+    background: #fff;
+    position: relative;
+    border-radius: 20px;
+}
+
+.int {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 29px;
+    border: none;
+    background: #fff;
+    font-size: 15px;
+}
+
+input {
+    font-family: Dotum,'돋움',Helvetica,sans-serif;    
+}
+
+.box.int_id {
+    padding-right: 110px;
+}
+
+.box.int_pass {
+    padding-right: 40px;
+}
+
+
+.btn_area {
+    margin: 30px 0 91px;
+}
+
+#btnJoin {
+    width: 100%;
+    padding: 21px 0 17px;
+    border: 0;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+    background-color: hsl(60, 100%, 95%);
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 20px;
 }
