주문내역 퍼블리싱

--- a/shoppingmall/account/templates/signup.html
+++ b/shoppingmall/account/templates/signup.html
@@ -42,7 +42,7 @@
 
                     <!-- ADRESS -->
                     <div>
-                        <h3 class="join_title"><label for="nickname">대학교</label></h3>
+                        <h3 class="join_title"><label for="nickname">주소</label></h3>
                         <span class="box int_name">
                             <input class="int" type="text" name="adress" placeholder="주소를 입력해주세요."><br>
                         </span>
