--- a/shoppingmall/shopping/static/css/order_finished.css
+++ b/shoppingmall/shopping/static/css/order_finished.css
@@ -9,51 +9,36 @@
     font-family: 'IM_Hyemin-Regular';
 }
 
-.item{
-    text-align: center;
-    padding-top: 5%;
-}
-
-.item-detail{
-    display: flex;
-    justify-content: center;
-    font-size: 12px;
-}
-
-#wrapper {
-    position: relative;
-    display: flex;
-    justify-content: center;
-}
-
-#content {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-}
-
-
 .btn_area {
-    margin: 30px 0 91px;
-    padding-left: 3%;
-    width: 200px;
+    text-align: center;
+    margin: 30px 0 90px;
+    padding-top: 3%;
 }
 
 #btnJoin {
-    width: 100%;
-    padding: 21px 0 17px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    width: 300px;
+    padding: 21px 0 15px;
     border: 0;
     cursor: pointer;
     color: rgb(0, 0, 0);
     background-color: hsl(60, 100%, 95%);
-    font-size: 13px;
+    font-size: 20px;
     border-radius: 20px;
 }
-
-.detail-body{
-    text-align: left;
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    text-decoration: none;
+    color: black;
 }
 
-.detail-body h3{
-    padding-bottom: 3%;
+#order-div{
+    padding-top: 3%;
+    font-size: 25px;
 }
+
